2002-12-06  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b4

	* Minor improvement in setup/functions.inc:inOpenBaseDir

	* Added support for Nuke6's ability to have a separate prefix
	  for the user table.

2002-11-29  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b2

	* Fixed a bug in the slideshow code where it would crash if the last
	  element in the album was a sub-album that the user did not have
	  permissions to view.

2002-11-28  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b1

	* Fixed a bug where when you add a new album at the top level, it moves
	  the wrong album to the beginning of the list (instead of the newly
	  created one)

	* Fixed a bug where if you hide all the elements of an album, they get
	  detached from the album.

	* Added a link to the permissions dialog in the admin dropdown box for 
	  nested albums

================================================================================
2002-11-27                      v1.3.2 release
================================================================================

2002-11-22  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b32

	* Added Beckett's fix to clean up temp files left around when uploading
	  via a URL or ZIP file.

2002-11-17  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b30

	* Fixed bug introduced in b21 causing [reset counter] link on
	  albums.php page to fail.

	* Fixed bug in the new "add caption with photo" code which generated an
	  error when you add a photo by URL or local-file.

2002-11-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b29

	* Fixed bug #638939: Publish XP gives wrong URL (Guido Claessen)
	  We were hand rolling the URL that appears at the end of the wizard,
	  which would lead to it not working when rewriting is disabled.

	* Tightened up the description of the publisher

	* Fixed a bug where the search function lowercases the result values
	  that it displays in context.  Thanks to Beckett Madden-Woods for the
	  patch. 
