@@ -475,8 +475,13 @@ list($imageWidth, $imageHeight) = $photo->image->getRawDimensions();
 <form name="sflyc4p" action="http://www.shutterfly.com/c4p/UpdateCart.jsp" method="post">
   <input type=hidden name=addim value="1">
   <input type=hidden name=protocol value="SFP,100">
+<?php if ($gallery->album->fields["print_photos"] == "shutterfly without donation") { ?>
+  <input type=hidden name=pid value="C4P">
+  <input type=hidden name=psid value="AFFL">
+<?php } else { ?>
   <input type=hidden name=pid value="C4PP">
   <input type=hidden name=psid value="GALL">
+<?php } ?>
   <input type=hidden name=referid value="gallery">
   <input type=hidden name=returl value="this-gets-set-by-javascript-in-onClick">
   <input type=hidden name=imraw-1 value="<?php echo $rawImage ?>">
