@@ -1,3 +1,11 @@
+2002-12-14  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b5
+
+	* Added a configuration option to allow you to choose to print your 
+	  photos on shutterfly without making a donation to the project.
+
+	* Fixed a minor bug in the support for Nuke6's separate user table
+	  prefix code.
+
 2002-12-06  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b4
 
 	* Minor improvement in setup/functions.inc:inOpenBaseDir
